css/style.css
@import url(variables.css);

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Space Grotesk", sans-serif;
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}

ul{
    list-style: none;   
}

a{
    text-decoration: none;
}

.container {
    display: flex;
    height: 100vh;

    padding: 5vh 5vw;
    background-color: var(--color-primary);

}

.sidebar {
    background-color: var(--color-primary);
    width: 20%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.sidebar h3 {
    font-family: "Space Grotesk";
    color: var(--color-text);
    font-size: 2vw;
    padding: 0em 0 0em .5em;
}

.sidebar li{
    border-radius: 1em 0 0 1em;
    padding: 1em 0 1em 1em;
    margin:.5em 0;
}

.sidebar ul li:last-child{
    margin-top: 40%;
}

.sidebar ul li:hover {
    cursor: pointer;
    background-color: var(--color-hover);
}

.sidebar ul li:focus {
    background-color: var(--color-shop);
}

.sidebar a {
    text-decoration: none;
    font-size: 1em;
    font-weight: 500;
    color: var(--color-text);
}

.sidebar h4 {
    padding: 1em;
    margin-bottom: 10%;
    color: var(--color-text);
}

.main-content {
    padding: 1.2em;
    flex-grow: 1;
    width: 100%;
    background-color: var(--color-shop);
    height: 100%;
    border-radius: 2em;
    overflow-y: auto;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.main-content h2{
    padding-left: .5em;
}

#product-grid {
    width: 100%;
    display: grid;
    gap:1.5em;
    grid-template-columns: repeat(auto-fill, minmax(198px, 1fr));;
    grid-template-rows: auto;
}

.product-item {
    background-color: #f2f2f2;
    text-align: center;
    border-radius: 1.5em;
    aspect-ratio: 2/3;
    overflow: hidden;
}

.product-info{
    height: 30%;
    border-radius: 1.5em;
    background-color: var(--color-triade);
    z-index: 2;
    position: relative;
    padding: 1em;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.product-info h3{
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    font-size: 0.7em;
    text-align: left ;
}

.info-foo{
    padding-top: .5em;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#trash-ico:hover{
    color: red;
    cursor: pointer;
    scale: 1.2;
}

/* #region fooButton */
/* .info-foo button{
    text-align: center;
    cursor: pointer;
    padding:  .2em .5em;
   
    font-weight: 500;
    background-color: var(--color-secundary);
    border: .5px solid var(--color-primary);
    border-radius: 2em;
} */

button {
    cursor: pointer;
    position: relative;
    padding:  .2em .2em;
    display: flex;
    justify-content: center;
    font-size: 0.8em;
    color: var(--color-primary);
    border: 2px solid var(--color-primary);
    border-radius: 2em;
    background-color: transparent;
    font-weight: 600;
    transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
    overflow: hidden;
  }
  
  button::before {
    content: '';
    position: absolute;
    inset: 0;
    margin: auto;
    width: 50px;
    height: 50px;
    border-radius: inherit;
    scale: 0;
    z-index: -1;
    background-color: var(--color-primary);
    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
  }
  
  button:hover::before {
    scale: 3;
  }
  
  button:hover {
    color: #212121;
    scale: 1.1;
    box-shadow: 0 0px 20px var(--color-primary);
  }
  
  button:active {
    scale: 1;
  }

/* #region fooButton */

.product-info p{
    text-align: left;
    overflow:hidden;
    inline-size: 100%;
    font-size: 0.7em;
}

.product-info p::first-letter{
    font-size: 1em;
    font-weight: 600;
}

.product-img {
    height: 70%;
}

.product-img img{
    width: 100%;
    object-fit: contain;
}

.cart-count {
    background-color: #ff6347;
    color: #fff;
    padding: 2px 6px;
    border-radius: 50%;
    font-size: .7em;
}

/* #region carGrid */
#car-grid {
    width: 100%;
    display: grid;
    gap:1.5em;
    grid-template-columns:100%;
    grid-template-rows:  repeat(auto-fit, minmax(100px, 1fr));
}

.car-item{
    display: flex;
    background-color: var(--color-primary);
    border-radius: 2em;
    overflow: hidden;
    align-items: center;
    justify-content: space-between;
    padding: 0 3em;
    flex-wrap: wrap;
}

.car-img{
    align-content: center;
    width: 10%;
    height: 100%;
}

.car-img img{
   object-fit: contain;
   width: 100%;
}

.car-item h6{
    font-size: 1.2em;
}

.car-item p{
    font-size: 1.1em;
}

.car-item i{
    font-size: 3em;
}

/* #endregion carGrid */

/* #region car */

    .car-manager{
        background-color: var(--color-hover);
        height: 10%;
        width: 100%;
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding:0 2em ;
    
    }

    #empty-car{
      background-color: #ff6347;
    }

    #shop-car{
        background-color: #ff6347;
    }

    .car-total{
        display: flex;
        gap: 1em;
    }

    #nothing{
        overflow: hidden;
        inline-size: 20em;
        padding: .8em;
    }
/* #endregion car */

